--- a/Client/Views/LatihanSatu/Index.cshtml
+++ b/Client/Views/LatihanSatu/Index.cshtml
@@ -3,16 +3,28 @@
     ViewData["Title"] = "Latihan Satu";
 }
 
-@section Styles{ 
-    <link href="~/css/latihan-satu.css" rel="stylesheet" />    
+@section Styles{
+    <link href="~/css/latihan-satu.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/2.2.3/css/buttons.dataTables.min.css">
 }
 
+@section Scripts{
+    <script src="~/js/latihan-satu.js"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.js"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.html5.min.js"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.print.min.js"></script>
+}
 <div class="text-center">
     <h1>Pokemon List</h1>
     @*<ul id="listPoke" class="text-left">
 
         </ul>*@
-    <table class="table table-striped table-hover">
+    <table class="table table-striped table-hover" id="pokemon-table">
         <thead class="thead-dark">
             <tr>
                 <th>No</th>
@@ -30,7 +42,7 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header" style="border: 0; background-color: #1e272e; color:#EEE">
-                <img src="#" alt="No Image" id="modalIcon" style="height:30px;  width:30px; transform: scale(2);"/>
+                <img src="#" alt="No Image" id="modalIcon" style="height:30px;  width:30px; transform: scale(2);" />
                 <h5 class="modal-title pl-2" id="modalDetailTitle">Modal title</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true" style="color: #EEE;">X</span>
@@ -75,15 +87,14 @@
                                 <canvas id="pokeStats" style="height:300px; width:300px;"></canvas>
                             </div>
                             <div class="tab-pane fade" id="nav-ability" role="tabpanel" aria-labelledby="nav-ability-tab">
-                                
+
                             </div>
                             <div class="tab-pane fade pt-5" id="nav-evolution" role="tabpanel" aria-labelledby="nav-evolution-tab">
                                 <div id="pokemonCarousel" class="carousel slide" data-ride="carousel" style="height:250px;">
                                     <ol class="carousel-indicators" id="pokemon-carousel-indicators">
-                                        
                                     </ol>
                                     <div class="carousel-inner" id="carousel-inner">
-                                        
+
                                     </div>
                                     <button class="carousel-control-prev" style="border: none;background-color: transparent;" type="button" data-target="#pokemonCarousel" data-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -98,10 +109,10 @@
                         </div>
                     </div>
                 </div>
-            @*<div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>*@
+                @*<div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>*@
             </div>
         </div>
     </div>
