--- a/Client/wwwroot/css/latihan-satu.css
+++ b/Client/wwwroot/css/latihan-satu.css
@@ -108,3 +108,11 @@
 .carousel-control-next-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
 }
+
+div#pokemon-table_wrapper thead.thead-dark tr th.sorting::after{
+    font-size:1.3rem;
+}
+
+div#pokemon-table_wrapper thead.thead-dark tr th.sorting::before {
+    font-size: 1.3rem;
+}
