add authorization with JWToken add login page add error page

--- a/Client/Views/Shared/_Layout.cshtml
+++ b/Client/Views/Shared/_Layout.cshtml
@@ -29,10 +29,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="LatihanSatu" asp-action="Index">Latihan Satu</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="LatihanDua" asp-action="Index">Latihan Dua</a>
+                                <a class="nav-link text-dark" href="/Login">Login</a>
                             </li>
                         </ul>
                     </div>
