--- a/Client/Views/LatihanDua/Index.cshtml
+++ b/Client/Views/LatihanDua/Index.cshtml
@@ -18,6 +18,7 @@
     <script type="text/javascript" charset="utf8" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.html5.min.js"></script>
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.print.min.js"></script>
+    <script type="text/javascript" charset="utf8" src="~/lib/sweetalert2/sweetalert2.all.min.js"></script>
 }
 
 <button type="button" class="btn btn-success btn-lg mb-3" onclick="generateUniversity(0)" data-toggle="modal" data-target="#registerEmployeeModal">
@@ -425,7 +426,7 @@
 </div>
 
 <!-- Delete Employee Modal -->
-<div class="modal fade" id="deleteEmployeeModal" tabindex="-1" aria-labelledby="deleteEmployeeModalLabel" aria-hidden="true">
+@*<div class="modal fade" id="deleteEmployeeModal" tabindex="-1" aria-labelledby="deleteEmployeeModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
@@ -443,7 +444,7 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
 
 <script>
     // Example starter JavaScript for disabling form submissions if there are invalid fields
